tests/errors/assertion.AssertionFailed.1.res
>> Assertion | File: assertion.AssertionFailed.1.art
       error | Line: 4
             | 
             | [x < 2]